--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.0",
+    "sonner": "^1.5.0",
     "toast": "^0.5.4"
   },
   "devDependencies": {
