--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-icons": "^1.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.0",
     "sonner": "^1.5.0",
