--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "body-parser": "^1.20.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.0",
     "sonner": "^1.5.0",
+    "tailwind-merge": "^2.4.0",
     "toast": "^0.5.4"
   },
   "devDependencies": {
