--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "body-parser": "^1.20.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-loading-icons": "^1.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
-    "toast": "^0.5.4"
+    "toast": "^0.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
