--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "body-parser": "^1.20.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
